# ARPC

./: .gitignore  README.md
examples/arpcClientArduino/lib/arpc_client/: arpc_client.h
examples/arpcClientLinux/arpc_client/: arpc_client.c
examples/arpcServerArduino/lib/arpc_server/: arpc_server.h
examples/arpcServerArduino/src/: main.cpp
examples/avr/arpcClientATMega2560/lib/arpc_client/: arpc_client.c
examples/avr/arpcClientATMega2560/src/: main.cpp
examples/avr/arpcClientLinux/: Makefile  main  main.c
examples/avr/arpcClientLinux/arpc_client/: arpc.h  arpc_client.h
examples/avr/arpcServerATMega2560/lib/arpc_server/: arpc.h  arpc_generic.c  arpc_generic.h  arpc_server.c
examples/avr/arpcServerATMega2560/src/: arpc.code-workspace  main.cpp
examples/stm32/arpcServerSTM32F401/: .cproject  .mxproject  .project  CMakeLists.txt  arpcServerSTM32F401.ioc  arpcServerSTM32F401.launch
examples/stm32/arpcServerSTM32F401/Core/Inc/: main.h
examples/stm32/arpcServerSTM32F401/Core/Src/: main.c  stm32f4xx_hal_msp.c
examples/stm32/arpcServerSTM32F401/Debug/: arpcServerSTM32F401.elf  arpcServerSTM32F401.list  arpcServerSTM32F401.map  makefile  objects.list  sources.mk
examples/stm32/arpcServerSTM32F401/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
examples/stm32/arpcServerSTM32F401/Debug/Core/Startup/: subdir.mk
examples/stm32/arpcServerSTM32F401/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd.su  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_pcd_ex.su  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc.su  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_rcc_ex.su  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  stm32f4xx_ll_usb.d  stm32f4xx_ll_usb.su  subdir.mk
examples/stm32/arpcServerSTM32F401/Debug/Drivers/arpc_server/: arpc_generic.cyclo  arpc_generic.d  arpc_generic.su  arpc_server.cyclo  arpc_server.d  arpc_server.su  subdir.mk
examples/stm32/arpcServerSTM32F401/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: subdir.mk  usbd_cdc.d  usbd_cdc.su
examples/stm32/arpcServerSTM32F401/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk  usbd_core.d  usbd_core.su  usbd_ctlreq.d  usbd_ctlreq.su  usbd_ioreq.d  usbd_ioreq.su
examples/stm32/arpcServerSTM32F401/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_cdc_if.cyclo  usbd_cdc_if.d  usbd_cdc_if.su  usbd_desc.d  usbd_desc.su
examples/stm32/arpcServerSTM32F401/Drivers/arpc_server/: arpc_generic.c  arpc_server.c  arpc_server.h
examples/stm32/arpcServerSTM32F401/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
outputs/arpc_client/: arpc_client.c  arpc_client.h
outputs/arpc_server/: arpc_generic.c  arpc_server.c
scripts/: arpc_generator.py
scripts/templates/: arpc_client.c  arpc_client.h  arpc_generic.c  arpc_server.c  arpc_server.h
